fixed wrap-problem with imgages in scill-frame

--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -36,22 +36,26 @@
     height: auto; //592px;
     padding: 4vw;
     max-width: 80%;
-    gap: 78px;
+    gap: 5.4vw; //78px of 1440px
     display: flex;
     flex-wrap: wrap;
     border: 4px solid black;
-    justify-content: flex-start;
+    justify-content: space-around;
+
     img {
-            width: 150px; /* Feste Breite */
-    height: 150px; 
-    object-fit: cover; 
+        width: 9vw;
+        height: fit-content;
+        object-fit: cover;
+        @media (max-width:450px) {
+            width: 52px;
+        }
     }
 }
 
 
 .arrow-right {
-img {
-    position: relative;
-    left: 20px;
-}
+    img {
+        position: relative;
+        left: 20px;
+    }
 }
